--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </button>
     </h1>
-    Hello. Today 
+    Hello. Today I will show you how to eat apples.
     <script>
         document.onclick = hideMenu;
         document.oncontextmenu = rightClick;
