--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </button>
     </h1>
     Hello. Today I will show you how to eat apples.
+    <script src="index.js"></script>
     <script>
         document.onclick = hideMenu;
         document.oncontextmenu = rightClick;
