--- a/index.html
+++ b/index.html
@@ -69,13 +69,7 @@
         <button id="main" class="fa-solid fa-face-meh-blank" title="access">
             <div id="contextMenu" class="context-menu" style="display:none">
                 <ul>
-                    <li><a href="#">Element-1</a></li>
-                    <li><a href="#">Element-2</a></li>
-                    <li><a href="#">Element-3</a></li>
-                    <li><a href="#">Element-4</a></li>
-                    <li><a href="#">Element-5</a></li>
-                    <li><a href="#">Element-6</a></li>
-                    <li><a href="#">Element-7</a></li>
+                    <li><a href="index.html">Javascript Course</a></li>
                 </ul>
             </div>
         </button>
