--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <button id="main" class="fa-solid fa-face-meh-blank" title="access">
             <div id="contextMenu" class="context-menu" style="display:none">
                 <ul>
-                    <li><a href="index.html">Javascript Course</a></li>
+                    <li><a href="jscourse.html">Javascript Course</a></li>
                 </ul>
             </div>
         </button>
